--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,15 @@
   background-color: white;
 }
 
+.sector-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.image_container {
+  flex-grow: 1;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
