--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@
   font-size: large;
 }
 .image {
-  width: 700px;
-  height: 700px;
+  width: 900px;
+  height: 900px;
   background-repeat: no-repeat;
   background-size: contain;
   /*background-image: url("https://drive.google.com/uc?id=1qqaxsJTW1aGQiyhMDkOj06csGVe6Ie8C")*/
@@ -33,8 +33,16 @@
   width: 700px;
   height: 700px
 }
-
-
+.row {
+  margin: 6px;
+}
+.selected_row {
+  /* border-bottom: 2px solid yellow; */
+  background-color: grey;
+}
+.row:before {
+  content: none;
+}
 .cell {
   width: 100px;
   text-align: left;
